TL-32646 content_marketplace: Fixed Linkedin learning icon height on ie

--- a/server/theme/legacy/scss/totara/catalog/item_narrow.scss
+++ b/server/theme/legacy/scss/totara/catalog/item_narrow.scss
@@ -73,6 +73,10 @@ $catalog_item_narrow-image_ratio: $catalog_item_narrow-image_height / $catalog_i
         &_logo {
           height: 20px;
           max-width: 70px;
+
+          .ie & {
+            height: 100%;
+          }
         }
       }
     }
